[tool.poetry]
name = "separations"
version = "0.1.0"
description = ""
authors = ["Adithya Anandsaikrishnan <anandsaikrishnan.adithya@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gensim = "~4.2.0"
nltk = "~3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
